--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-alinode": "^2.0.1",
     "egg-cors": "^2.2.3",
     "egg-polkadot": "^1.0.0",
     "egg-router-plus": "^1.3.1",
@@ -27,8 +28,9 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-egg-polkadot-server",
-    "stop": "egg-scripts stop --title=egg-server-egg-polkadot-server",
+    "start": "egg-scripts start --title=egg-polkadot-server",
+    "start-daemon": "egg-scripts start --daemon --title=egg-polkadot-server",
+    "stop": "egg-scripts stop --title=egg-polkadot-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
