--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
+    "dockposer": "^0.1.6",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
@@ -28,7 +29,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --title=egg-polkadot-server",
+    "start": "egg-scripts start --port=80 --hostname=0.0.0.0 --title=egg-polkadot-server",
     "start-daemon": "egg-scripts start --daemon --title=egg-polkadot-server",
     "stop": "egg-scripts stop --title=egg-polkadot-server",
     "dev": "egg-bin dev",
@@ -39,7 +40,9 @@
     "lint": "eslint .",
     "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "build": "dockposer build registry.cn-shenzhen.aliyuncs.com/zingy9217/egg-polkadot-server:{NPM_PACKAGE_VERSION}",
+    "push": "dockposer push registry.cn-shenzhen.aliyuncs.com/zingy9217/egg-polkadot-server:{NPM_PACKAGE_VERSION}"
   },
   "ci": {
     "version": "10"
